feature, train, predict py files formed

--- a/notebooks/07_deep_learning_improving_model.ipynb
+++ b/notebooks/07_deep_learning_improving_model.ipynb
@@ -14574,7 +14574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "07620899",
    "metadata": {},
    "outputs": [
@@ -14681,7 +14681,7 @@
     "print(family_encoded_df.head())\n",
     "\n",
     "# Define the output path\n",
-    "INTERIM_DATA_DIR = Path(\"/home/user/Downloads/venvs/store_sales/src/store-sales/data/interim\")\n",
+    "#INTERIM_DATA_DIR = Path(\"/home/user/Downloads/venvs/store_sales/src/store-sales/data/interim\")\n",
     "family_encoded_output_path = INTERIM_DATA_DIR / \"family_encoded_df.csv\"\n",
     "\n",
     "# Save the final DataFrame to the specified path\n",
